added some svgs

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://unpkg.com/turretcss/dist/turretcss.min.css" crossorigin="anonymous">
-    <link rel="icon" href="favicon.svg">
+    <link rel="icon" href="../images/favicon.svg">
     <title>Feedreader</title>
 </head>
 
