--- a/templates/article_list.html
+++ b/templates/article_list.html
@@ -1,6 +1,6 @@
 <div id="article_list">
     {% for article in articles %}
-    <article class="border padding-xs margin-bottom-s">
+    <article class="border box-shadow-m padding-xs margin-top-s">
         <header>
             <hgroup>
                 <div class="group group-m group-space-between">
@@ -9,57 +9,99 @@
                             <h3 class="no-margin-bottom">{{ article.feed }}</h3>
                         </li>
                         <li>
-                            <p>{{ article.published }}</p>
+                            <button title="mark read" class="button button-square button-white" href="#"
+                                hx-post="/articles/{{ article.id }}/read"
+                                hx-headers='{"pagination": "{{ cursor.curr }}"}' hx-target="#article_list"
+                                hx-swap="outerHTML">
+                                {% if article.read %}
+                                <svg height="48" viewBox="0 0 48 48" width="48" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="m0 0h48v48h-48z" fill="none" />
+                                    <path
+                                        d="m45.3 22.1c-2.1-2.6-9.9-11.1-21.3-11.1a23.4 23.4 0 0 0 -3.8.3l3.6 3.7h.2c8.8 0 15.3 6.2 17.7 9a33.7 33.7 0 0 1 -4.6 4.3l2.8 2.8a30.1 30.1 0 0 0 5.4-5.2 3 3 0 0 0 0-3.8z" />
+                                    <path
+                                        d="m29.4 26.6a5.8 5.8 0 0 0 .6-2.6 6 6 0 0 0 -6-6 5.8 5.8 0 0 0 -2.6.6l-11.7-11.7a2 2 0 0 0 -2.8 2.8l4.7 4.8a32.1 32.1 0 0 0 -8.9 7.6 3 3 0 0 0 0 3.8c2.1 2.6 9.9 11.1 21.3 11.1a23 23 0 0 0 8.5-1.6l5.8 5.7a2 2 0 1 0 2.8-2.8zm-5.4 6.4c-8.8 0-15.3-6.2-17.7-9a29.7 29.7 0 0 1 8.3-6.6l4 4a5.8 5.8 0 0 0 -.6 2.6 6 6 0 0 0 6 6 5.8 5.8 0 0 0 2.6-.6l2.8 2.8a19.1 19.1 0 0 1 -5.4.8z" />
+                                </svg>
+                                {% else %}
+                                <svg enable-background="new 0 0 20 20" viewBox="0 0 20 20"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path clip-rule="evenodd"
+                                        d="m13.3 8.71c.18.18.43.29.71.29s.53-.11.71-.29l4.99-5c.17-.18.29-.43.29-.71 0-.55-.45-1-1-1-.28 0-.53.11-.71.29l-4.29 4.29-2.29-2.29c-.17-.18-.42-.29-.7-.29-.55 0-1 .45-1 1 0 .28.11.53.29.71zm6.7 1.25c0-.01 0-.02 0-.03v-.01c0-.01 0-.01 0-.02s0-.01 0-.02c-.02-.16-.1-.32-.21-.44-.44-.55-.94-1.05-1.46-1.52l-2.2 2.2c-.55.54-1.3.88-2.12.88-.05 0-.09-.01-.14-.01-.44 1.74-1.99 3.02-3.86 3.02-2.21 0-4-1.8-4-4.01 0-1.62.96-3.01 2.34-3.64-.21-.41-.33-.87-.33-1.36 0-.28.05-.54.12-.8-1.05.22-2.07.64-3.02 1.15-1.57.85-3 2.02-4.24 3.33-.23.25-.46.5-.67.76-.28.35-.28.77 0 1.12.64.8 1.4 1.52 2.17 2.17 1.66 1.41 3.56 2.58 5.66 3.06 1.21.27 2.43.29 3.65.05 1.11-.21 2.18-.65 3.18-1.19 1.57-.85 3-2.02 4.24-3.33.23-.24.46-.49.67-.76.11-.12.18-.27.21-.44 0-.01 0-.01 0-.02s0-.01 0-.02v-.01c0-.01 0-.02 0-.03s0-.03 0-.04c.01-.01.01-.03.01-.04zm-9.99 2.05c1.03 0 1.87-.79 1.98-1.8-.03-.03-.06-.06-.09-.09l-.01.01-2.1-2.11c-1 .11-1.77.95-1.77 1.98-.01 1.11.89 2.01 1.99 2.01z"
+                                        fill-rule="evenodd" />
+                                </svg> {% endif %}
+                            </button>
+                            <button title="mark favorite" class="button button-square button-white"
+                                hx-post="/articles/{{ article.id }}/favorite" hx-target="#article_list"
+                                hx-swap="outerHTML" hx-headers='{"pagination": "{{ cursor.curr }}"}'>
+                                {% if article.favorited %}
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+                                    <path
+                                        d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z" />
+                                </svg>
+                                {% else %}
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+                                    <path
+                                        d="M287.9 0C297.1 0 305.5 5.25 309.5 13.52L378.1 154.8L531.4 177.5C540.4 178.8 547.8 185.1 550.7 193.7C553.5 202.4 551.2 211.9 544.8 218.2L433.6 328.4L459.9 483.9C461.4 492.9 457.7 502.1 450.2 507.4C442.8 512.7 432.1 513.4 424.9 509.1L287.9 435.9L150.1 509.1C142.9 513.4 133.1 512.7 125.6 507.4C118.2 502.1 114.5 492.9 115.1 483.9L142.2 328.4L31.11 218.2C24.65 211.9 22.36 202.4 25.2 193.7C28.03 185.1 35.5 178.8 44.49 177.5L197.7 154.8L266.3 13.52C270.4 5.249 278.7 0 287.9 0L287.9 0zM287.9 78.95L235.4 187.2C231.9 194.3 225.1 199.3 217.3 200.5L98.98 217.9L184.9 303C190.4 308.5 192.9 316.4 191.6 324.1L171.4 443.7L276.6 387.5C283.7 383.7 292.2 383.7 299.2 387.5L404.4 443.7L384.2 324.1C382.9 316.4 385.5 308.5 391 303L476.9 217.9L358.6 200.5C350.7 199.3 343.9 194.3 340.5 187.2L287.9 78.95z" />
+                                </svg>
+                                {% endif %}
+                            </button>
                         </li>
                     </ul>
                 </div>
-                <hr>
-                <h4 class="no-margin-bottom no-margin-top"><a href="{{ article.link }}" target="_blank>">{{
+                <h4 class="no-margin-bottom"><a href="{{ article.link }}" target="_blank>">{{
                         article.title }}</a></h4>
+                <p class="no-margin-top">{{ article.published }}</p>
+
                 {% if article.read_date != "-1" %}
-                <p class="no-margin-bottom no-margin-top">Read on {{ article.read_date }}</p>
+                <p class="no-margin-bottom no-margin-top">Read {{ article.read_date }}</p>
                 {% endif %}
             </hgroup>
         </header>
-        <p class="flex">
-            <a class="padding-right-xs" href="#" hx-post="/articles/{{ article.id }}/read"
-                hx-headers='{"pagination": "{{ page.curr }}"}' hx-target="#article_list" hx-swap="outerHTML">
-                {% if article.read %}
-                Mark Unread
-                {% else %}
-                Read
-                {% endif %}
-            </a>
-            </a>
-            <a class="padding-right-xs" href="#" hx-post="/articles/{{ article.id }}/favorite" hx-target="#article_list"
-                hx-swap="outerHTML" hx-headers='{"pagination": "{{ page.curr }}"}'>
-                {% if article.favorited %}
-                Unfavorite
-                {% else %}
-                Favorite
-                {% endif %}
-            </a>
-        </p>
     </article>
     {% endfor %}
-    <div class="group group-m group-space-between">
+    {% if articles.len() != 0 %}
+    <div class="group group-m group-space-between margin-top-s">
         <ul>
             <li>
-                {% if page.has_prev %}
-                <a href="#" hx-get="/articles" hx-target="#article_list" hx-headers='{"pagination": "{{ page.prev }}"}'
-                    hx-swap="outerHTML">Previous</a>
+                {% if cursor.has_prev %}
+                <button title="previous page" hx-get="/articles" hx-target="#article_list" hx-swap="outerHTML"
+                    hx-headers='{"pagination": "{{ cursor.prev }}"}'>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                        <polygon fill="var(--ci-primary-color, currentColor)"
+                            points="497.333 239.999 80.092 239.999 176.087 144.004 153.46 121.377 18.837 256 153.46 390.623 176.087 367.996 80.09 271.999 497.333 271.999 497.333 239.999"
+                            class="ci-primary" />
+                    </svg>
+                </button>
                 {% else %}
-                <p>Previous</p>
+                <button title="previous page" disabled>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                        <polygon fill="var(--ci-primary-color, currentColor)"
+                            points="497.333 239.999 80.092 239.999 176.087 144.004 153.46 121.377 18.837 256 153.46 390.623 176.087 367.996 80.09 271.999 497.333 271.999 497.333 239.999"
+                            class="ci-primary" />
+                    </svg>
+                </button>
                 {% endif %}
             </li>
             <li>
-                {% if page.has_next %}
-                <a href="#" hx-get="/articles" hx-target="#article_list" hx-headers='{"pagination": "{{ page.next }}"}'
-                    hx-swap="outerHTML">Next</a>
+                {% if cursor.has_next %}
+                <button title="next page" hx-get="/articles" hx-target="#article_list" hx-swap="outerHTML"
+                    hx-headers='{"pagination": "{{ cursor.next }}"}'>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                        <polygon fill="var(--ci-primary-color, currentColor)"
+                            points="359.873 121.377 337.246 144.004 433.243 240.001 16 240.001 16 240.002 16 272.001 16 272.002 433.24 272.002 337.246 367.996 359.873 390.623 494.498 256 359.873 121.377"
+                            class="ci-primary" />
+                    </svg>
+                </button>
                 {% else %}
-                <p>Next</p>
+                <button title="next page" disabled>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                        <polygon fill="var(--ci-primary-color, currentColor)"
+                            points="359.873 121.377 337.246 144.004 433.243 240.001 16 240.001 16 240.002 16 272.001 16 272.002 433.24 272.002 337.246 367.996 359.873 390.623 494.498 256 359.873 121.377"
+                            class="ci-primary" />
+                    </svg>
+                </button>
                 {% endif %}
             </li>
         </ul>
     </div>
+    {% endif %}
 </div>
