--- a/templates/feed_list.html
+++ b/templates/feed_list.html
@@ -32,8 +32,8 @@
             </li>
           </ul>
         </div>
-        <hr>
-        <p class="no-margin-top"><a href={{ feed.site_url }} target="_blank">{{ feed.site_url }}</a></p>
+        <p><a href={{ feed.site_url }} target="_blank">{{ feed.site_url }}</a></p>
+        <p><a href={{ feed.feed_url }} target="_blank">{{ feed.feed_url }}</a></p>
       </hgroup>
     </header>
     <div class="">
